syntax = "proto3";

option java_multiple_files = true;
option java_outer_classname = "HelloGrpcProto";

package homo.efficio.springcamp2017.grpc.hello;

message HelloRequest {
    string request = 1;
}

message HelloResponse {
    string response = 1;
}

service HelloSpringCamp {

    rpc unaryHello(HelloRequest) returns (HelloResponse) {}
}
